[gd_scene load_steps=11 format=3 uid="uid://7v6c3rjvvx7v"]

[ext_resource type="Script" path="res://ui/shared/combatUnitPanel/combat_unit_panel.gd" id="1_wkq0j"]
[ext_resource type="Theme" uid="uid://ddtfysfh2th3t" path="res://ui/shared/combatUnitPanel/CombatUnitPanelFriendly.tres" id="2_6g2cx"]
[ext_resource type="Shader" path="res://resources/shaders/StrokeShader.gdshader" id="3_n1d0n"]
[ext_resource type="Texture2D" uid="uid://dhjpwrse1w5lq" path="res://resources/sprites/units/knight_icon.tres" id="4_unxlk"]
[ext_resource type="Texture2D" uid="uid://b4x5dwqc4ap1w" path="res://resources/sprites/icons/Mounted_icon.png" id="5_41m1w"]
[ext_resource type="Texture2D" uid="uid://b5a2jao5ef4rq" path="res://resources/sprites/icons/monster_icon.png" id="6_tk220"]
[ext_resource type="Texture2D" uid="uid://blijlre1sii7l" path="res://resources/sprites/icons/flyer_icon.png" id="7_krum3"]
[ext_resource type="Texture2D" uid="uid://cqm5bfwkx8b3p" path="res://resources/sprites/icons/amor_icon.png" id="8_dtaf8"]
[ext_resource type="Texture2D" uid="uid://ots6mr21urrf" path="res://resources/sprites/icons/animal_icon.png" id="9_ckca1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrs2d"]
shader = ExtResource("3_n1d0n")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/color_factor = null
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[node name="CombatUnitPanel" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.0
offset_right = 334.0
offset_bottom = 23.0
grow_vertical = 2
script = ExtResource("1_wkq0j")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.5
offset_right = 220.0
offset_bottom = 22.5
grow_vertical = 2
theme = ExtResource("2_6g2cx")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UnitIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_lrs2d")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_unxlk")

[node name="UnitName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Example Unit Name"

[node name="IconContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="calvaryIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_41m1w")

[node name="monsterIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_tk220")

[node name="flyerIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("7_krum3")

[node name="armorIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_dtaf8")

[node name="animalIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ckca1")
